[package]
name = "opentelemetry-etw"
description = "OpenTelemetry-Rust Trace Span Exporter to ETW"
version = "0.2.0"
edition = "2021"
resolver = "2"
license = "MIT"
repository = "https://github.com/Robo210/opentelemetry-etw-tracelogging"
rust-version = "1.67"
authors = ["Kyle Sabo", "Microsoft"]

[features]
json = ["dep:serde", "dep:serde_json"]
rt-tokio = ["dep:tokio", "opentelemetry_sdk/rt-tokio"]
default = []

[lib]

[dependencies]
opentelemetry = "0.18"
tracelogging = ">= 1.1.0"
tracelogging_dynamic = ">= 1.1.0"
linux_tlg = {version="0.1", path="T:\\LinuxTraceLogging\\rust\\eventheader", package="eventheader"}
linux_tld = {version="0.1", path="T:\\LinuxTraceLogging\\rust\\eventheader_dynamic", package="eventheader_dynamic"}
opentelemetry_api = {version="0.18", default-features = false, features=["trace"]}
opentelemetry_sdk = "0.18"
futures-util = "0.3"
chrono = {version="0.4", default-features = false, features=["std"]}
serde = {version = "1.0", optional=true}
serde_json = {version="1.0", optional=true}
tokio = {version="1.0", optional=true, features=["rt-multi-thread", "rt"]}

[dev-dependencies]
windows = {version="0.48.0", features=["Win32_System_Diagnostics_Etw", "Win32_Foundation", "Win32_System_Time"]}
futures = "0.3"
crossbeam-channel = "0.5"
tokio = {version="1.0", features=["full"]}
rsevents = "0.3"
criterion = {version="0.4", features=["html_reports"]}
etw_helpers = {version="0.1", path="../../etw_helpers"}

[[bench]]
name = "etw"
harness = false

[[bench]]
name = "user_events"
harness = false