[package]
name = "opentelemetry-etw-user_events"
description = "OpenTelemetry-Rust Trace Span Exporter to ETW and user_events"
version = "0.2.0"
edition = "2021"
resolver = "2"
license = "MIT"
repository = "https://github.com/Robo210/opentelemetry-etw-tracelogging"
rust-version = "1.69"
authors = ["Kyle Sabo", "Microsoft"]

[features]
json = ["dep:serde", "dep:serde_json"]
rt-tokio = ["dep:tokio", "opentelemetry_sdk/rt-tokio"]
rt-tokio-current-thread = ["dep:tokio", "opentelemetry_sdk/rt-tokio-current-thread"]
rt-async-std = ["dep:async-std", "opentelemetry_sdk/rt-async-std"]
default = []

[lib]

[dependencies]
tracelogging = ">= 1.1.0"
tracelogging_dynamic = ">= 1.1.0"
eventheader = "0.1"
eventheader_dynamic = "0.1"
opentelemetry = {workspace = true}
opentelemetry_api = {workspace = true}
opentelemetry_sdk = {workspace = true}
futures-util = "0.3"
chrono = {version="0.4", default-features = false, features=["std"]}
serde = {version = "1.0", optional=true}
serde_json = {version="1.0", optional=true}
tokio = {version="1.0", optional=true, features=["rt-multi-thread", "rt"]}
async-std = {version="1.6", optional=true}

[dev-dependencies]
windows = {version="0.48", features=["Win32_System_Diagnostics_Etw", "Win32_Foundation", "Win32_System_Time"]}
futures = "0.3"
crossbeam-channel = "0.5"
tokio = {version="1.0", features=["full"]}
rsevents = "0.3"
criterion = {version="0.4", features=["html_reports"]}
etw_helpers = {version="0.1", path="../../etw/rust/etw_helpers"}

[[bench]]
name = "etw"
harness = false

[[bench]]
name = "user_events"
harness = false
